# tcp_interface

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
config/: UDPpeers.cfg
src/: CmdServer.cpp  TcpClientList.cpp  TcpServer.h  UDPManager.cpp  tcpinterface.cpp
